# fastapi-template

./: README.md  alembic.ini  pyproject.toml
application/: .env  index.html  main.py
application/api/: routes.py
application/config/: settings.py
application/database/: __init__.py
application/database/migrations/: env.py
application/database/models/: user.py
